--- a/themes/default/sport/profile_coach.html
+++ b/themes/default/sport/profile_coach.html
@@ -12,6 +12,7 @@
                 {{ template.topmenu|raw }}
 
                 <div class="coachprofile">
+                {% if permission.sport.profile_coach.view %}
 
                     <!-- START : STAFF PROFILE  -->
                     <section class="profileview">
@@ -313,7 +314,9 @@
                         </div>
                     </section>
                                 
-
+                {% else %}
+                    {% include "blocks/permission_denied.html" %}
+                {% endif %}
                 </div>
 
             </div>
