--- a/themes/default/student/profile.html
+++ b/themes/default/student/profile.html
@@ -208,7 +208,24 @@
                                                                                 {% endfor %}
                                                                             </select>
                                                                         </div>
-                                                                    </div>                                                                    
+                                                                    </div>
+
+                                                                    <form action="#" method="post" enctype="multipart/form-data">
+                                                                        <div class="form-row">
+                                                                            <div class="col-8">
+                                                                                <div class="form-group">
+                                                                                    <label for="">Class</label>
+                                                                                    <input class="form-control-file" type="file" name="propic" />
+                                                                                </div>
+                                                                            </div>
+                                                                            <div class="col-4">
+                                                                                <div class="form-group">
+                                                                                    <label for="">&nbsp;</label>
+                                                                                    <button type="submit" class="btn btn-primary btn-sm form-control-sm form-control" onclick="upload_profile_picture()">Save</button>
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+                                                                    </form>
 
                                                                 </div>
                                                             </div>
