--- a/themes/default/student/profile.html
+++ b/themes/default/student/profile.html
@@ -19,6 +19,15 @@
 
                         <h4 class="page-title">Student Details</h4>
 
+                        {% if permission.upload.propic %}
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                            <strong>Upload failed</strong>
+                            <button type="button" class="close" data-dismiss="alert">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        {% endif %}
+
                         <div class="row mt-5">
                             <div class="col-12">
 
@@ -212,6 +221,10 @@
                                                                     </div>
 
                                                                     <form action="#" method="post" enctype="multipart/form-data">
+
+                                                                        <!-- HIDDEN -->
+                                                                        <input type="hidden" name="stu_id" value="{{ student.id }}" >
+
                                                                         <div class="form-row">
                                                                             <div class="col-8">
                                                                                 <div class="form-group">
