--- a/themes/default/health/add.html
+++ b/themes/default/health/add.html
@@ -17,6 +17,15 @@
                     <!-- START : HEALTH SEARCH -->
                     <h4 class="page-title"> Add Health Records </h4>
 
+                    {% if permission.denied.status %}
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                            <strong>{{ permission.denied.message }}</strong>
+                            <button type="button" class="close" data-dismiss="alert">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        {% endif %}
+                        
                     <div class="card mt-4">
 
                         <div class="card-header">
