--- a/themes/default/exam/create.html
+++ b/themes/default/exam/create.html
@@ -18,6 +18,15 @@
                 <div class="examcreate">
                     {% if permission.exam.create.view %}
 
+                    {% if permission.denied.status %}
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                            <strong>{{ permission.denied.message }}</strong>
+                            <button type="button" class="close" data-dismiss="alert">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        {% endif %}
+
                     <!-- START : ADD EXAM -->
                     <div class="addexam">
 
@@ -454,30 +463,37 @@
                     var formData = new FormData;
                     formData.append("type_id", id)
 
-                    $.ajax({
-                        url: "{{ app.url }}/exam/ajax_remove_exam_type",
-                        method: 'POST',
-                        data: formData,
-                        processData: false,
-                        contentType: false,
-                        dataType: 'json',
-                        success: Response => {
-                            if ( Response.status === 'success' ) {
-                                alertify.alert("Success", "Exam type deleted Successfully").set({
-                                    'closable': false,
-                                    'onok': () => {
-                                        location.reload()
-                                    }
-                                })
+                    alertify.confirm('<span class="text-danger"><i class="la la-exclamation-circle"></i> Caution</span>', 'Are you sure you want to Delete...? All data related to this record will be deleted.', 
+                    function(){ 
+
+                        $.ajax({
+                            url: "{{ app.url }}/exam/ajax_remove_exam_type",
+                            method: 'POST',
+                            data: formData,
+                            processData: false,
+                            contentType: false,
+                            dataType: 'json',
+                            success: Response => {
+                                if ( Response.status === 'success' ) {
+                                    alertify.alert("Success", "Exam type deleted Successfully").set({
+                                        'closable': false,
+                                        'onok': () => {
+                                            location.reload()
+                                        }
+                                    })
+                                }
+                                else {
+                                    alertify.alert("Failed", Response.message)
+                                }
+                            },
+                            error: (e) => {
+                                console.log( e.responseText )
                             }
-                            else {
-                                alertify.alert("Failed", Response.message)
-                            }
-                        },
-                        error: (e) => {
-                            console.log( e.responseText )
-                        }
-                    })
+                        })
+
+                    },
+                    function(){ alertify.error('Deletion process cancelled')}
+                    );
                 },
 
                 // INVOKE EDIT MODAL
@@ -572,30 +588,37 @@
                 var formData = new FormData;
                 formData.append("exam_id", examId)
 
-                $.ajax({
-                    url: "{{ app.url }}/exam/ajax_remove_exam",
-                    method: 'POST',
-                    data: formData,
-                    processData: false,
-                    contentType: false,
-                    dataType: 'json',
-                    success: Response => {
-                        if ( Response.status === 'success' ) {
-                            alertify.alert("Success", "Exam Deleted Successfully").set({
-                                'closable': false,
-                                'onok': () => {
-                                    location.reload()
-                                }
-                            })
+                alertify.confirm('<span class="text-danger"><i class="la la-exclamation-circle"></i> Caution</span>', 'Are you sure you want to Delete...? All data related to this record will be deleted.', 
+                    function(){ 
+
+                    $.ajax({
+                        url: "{{ app.url }}/exam/ajax_remove_exam",
+                        method: 'POST',
+                        data: formData,
+                        processData: false,
+                        contentType: false,
+                        dataType: 'json',
+                        success: Response => {
+                            if ( Response.status === 'success' ) {
+                                alertify.alert("Success", "Exam Deleted Successfully").set({
+                                    'closable': false,
+                                    'onok': () => {
+                                        location.reload()
+                                    }
+                                })
+                            }
+                            else {
+                                alertify.alert("Failed", Response.message)
+                            }
+                        },
+                        error: (e) => {
+                            console.log( e.responseText )
                         }
-                        else {
-                            alertify.alert("Failed", Response.message)
-                        }
-                    },
-                    error: (e) => {
-                        console.log( e.responseText )
-                    }
-                })
+                    })
+
+                },
+                function(){ alertify.error('Deletion process cancelled')}
+                );
                 
             }
         }
