--- a/themes/default/parents/search.html
+++ b/themes/default/parents/search.html
@@ -16,6 +16,15 @@
 
                     <h4 class="page-title">Search Parent</h4>
 
+                    {% if permission.denied.status %}
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                            <strong>{{ permission.denied.message }}</strong>
+                            <button type="button" class="close" data-dismiss="alert">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        {% endif %}
+
                     <!-- START : SEARCH PARENT PANEL -->
                     <div class="card mt-4">
                         <div class="card-header">Search Parent</div>
