--- a/themes/default/report/timetable.html
+++ b/themes/default/report/timetable.html
@@ -15,6 +15,15 @@
 
                     <h4 class="page-title"> TimeTable Reports </h4>
 
+                    {% if permission.denied.status %}
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                            <strong>{{ permission.denied.message }}</strong>
+                            <button type="button" class="close" data-dismiss="alert">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        {% endif %}
+
                     <div class="col-12 mt-5">
                         <div class="row">
 
@@ -215,30 +224,36 @@
         let formData = new FormData()
         formData.append("report_id", id)
 
-        // AJAX
-        $.ajax({
-            url: "{{ app.url }}/report/delete_report_ajax",
-            method: 'POST',
-            data: formData,
-            processData: false,
-            contentType: false,
-            dataType: 'json',
-            success: Response => {
-                if ( Response.status === 'success' ) {
-                    alertify.alert("Success", "Report Deleted Successfully").set({
-                        'closable': false,
-                        'onok': () => {
-                            location.reload()
-                        }
-                    })
-                } else {
-                    alertify.alert("Failed", Response.error)
+        alertify.confirm('<span class="text-danger"><i class="la la-exclamation-circle"></i> Caution</span>', 'Are you sure you want to Delete...? All data related to this record will be deleted.', 
+            function(){ 
+
+            // AJAX
+            $.ajax({
+                url: "{{ app.url }}/report/delete_report_ajax",
+                method: 'POST',
+                data: formData,
+                processData: false,
+                contentType: false,
+                dataType: 'json',
+                success: Response => {
+                    if ( Response.status === 'success' ) {
+                        alertify.alert("Success", "Report Deleted Successfully").set({
+                            'closable': false,
+                            'onok': () => {
+                                location.reload()
+                            }
+                        })
+                    } else {
+                        alertify.alert("Failed", Response.error)
+                    }
+                },
+                error: e => {
+                    console.log( e.responseText )
                 }
-            },
-            error: e => {
-                console.log( e.responseText )
-            }
-        })
+            })
+        },
+        function(){ alertify.error('Deletion process cancelled')}
+        );
     }
 
 </script>
