--- a/themes/default/result/search.html
+++ b/themes/default/result/search.html
@@ -15,6 +15,15 @@
 
                     <h4 class="page-title"> Search Exam Result </h4>
 
+                    {% if permission.denied.status %}
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                            <strong>{{ permission.denied.message }}</strong>
+                            <button type="button" class="close" data-dismiss="alert">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        {% endif %}
+
                     <!-- START : SEARCH EXAM -->
                     <div class="card mt-4">
                         <div class="card-header">Search relevant student</div>
@@ -293,30 +302,36 @@
             var formData = new FormData;
             formData.append('id', id)
 
-            // REQUEST
-            $.ajax({
-                url: "{{ app.url }}/result/ajax_removeresult",
-                method: 'POST',
-                data: formData,
-                processData: false,
-                contentType: false,
-                dataType: 'json',
-                success: (res) => {
-                    
-                    if ( res.status == 'success' ) {
-                        alertify.alert("Success", "Result Deleted successfully ... ").set('onok', function() {
-                            location.reload();
-                        })
-                    } else {
-                        console.log(res);
-                        alertify.alert("Failed", res.message);
+            alertify.confirm('<span class="text-danger"><i class="la la-exclamation-circle"></i> Caution</span>', 'Are you sure you want to Delete...? All data related to this record will be deleted.', 
+            function(){ 
+
+                // REQUEST
+                $.ajax({
+                    url: "{{ app.url }}/result/ajax_removeresult",
+                    method: 'POST',
+                    data: formData,
+                    processData: false,
+                    contentType: false,
+                    dataType: 'json',
+                    success: (res) => {
+                        
+                        if ( res.status == 'success' ) {
+                            alertify.alert("Success", "Result Deleted successfully ... ").set('onok', function() {
+                                location.reload();
+                            })
+                        } else {
+                            console.log(res);
+                            alertify.alert("Failed", res.message);
+                        }
+                    },
+                    error: (e) => {
+                        alertify.alert("Error", "Something went wrong ... ");
+                        console.log(e.responseText)
                     }
-                },
-                error: (e) => {
-                    alertify.alert("Error", "Something went wrong ... ");
-                    console.log(e.responseText)
-                }
-            })
+                })
+            },
+        function(){ alertify.error('Deletion process cancelled')}
+        );
         }
         // END : REMOVE RESULT
     </script>
