--- a/themes/default/school/index.html
+++ b/themes/default/school/index.html
@@ -14,6 +14,15 @@
                 <div class="row schoolindex">
                 {% if permission.management.index.view %}
 
+                {% if permission.denied.status %}
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                            <strong>{{ permission.denied.message }}</strong>
+                            <button type="button" class="close" data-dismiss="alert">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        {% endif %}
+
                     <div class="col-12">
                         <div class="row">
                             
