--- a/themes/default/staff/profile.html
+++ b/themes/default/staff/profile.html
@@ -22,6 +22,15 @@
                         <div class="row mt-5">
                             <div class="col-12">
 
+                                {% if propic.upload.failed.status %}
+                                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                                    <strong>{{ propic.upload.failed.message }}</strong>
+                                    <button type="button" class="close" data-dismiss="alert">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                {% endif %}
+
                                 <div class="card">
                                     <div class="card-header">
                                         <div class="media">
@@ -255,6 +264,27 @@
                                                                     </div>
 
                                                                 </div>
+
+                                                                <!-- PROFILE PICTURE UPLOAD -->
+                                                                <form action="#" method="post" enctype="multipart/form-data">
+                                                                    <!-- HIDDEN -->
+                                                                    <input type="hidden" name="staff_id" value="{{ staff.id }}" >
+                                                                    <div class="form-row">
+                                                                        <div class="col-4">
+                                                                            <div class="form-group">
+                                                                                <label for="">Profile Picture Upload</label>
+                                                                                <input class="form-control-file" type="file" name="propic" />
+                                                                            </div>
+                                                                        </div>
+                                                                        <div class="col-2">
+                                                                            <div class="form-group">
+                                                                                <label for="">&nbsp;</label>
+                                                                                <button type="submit" class="btn btn-primary btn-sm form-control-sm form-control" onclick="upload_profile_picture()">Save</button>
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                </form>
+
                                                             </div>
                                                         </div>
                                                     </div>
