--- a/themes/default/student/add.html
+++ b/themes/default/student/add.html
@@ -16,6 +16,15 @@
                     
                     <h4 class="page-title">Add Student</h4>
 
+                    {% if permission.denied.status %}
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                            <strong>{{ permission.denied.message }}</strong>
+                            <button type="button" class="close" data-dismiss="alert">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        {% endif %}
+
                     <form name="admission" method="POST" action="#">
                         <div id="accordionAdmission">
                         
