--- a/themes/default/timetable/create.html
+++ b/themes/default/timetable/create.html
@@ -16,6 +16,15 @@
 
                     <h4 class="page-title"> Create Time Table </h4>
 
+                    {% if permission.denied.status %}
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                            <strong>{{ permission.denied.message }}</strong>
+                            <button type="button" class="close" data-dismiss="alert">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        {% endif %}
+
                     <section class="selectowner">
 
                         <form method="post">
