--- a/themes/default/user/search.html
+++ b/themes/default/user/search.html
@@ -14,6 +14,15 @@
                 <div class="usersearch">
                 {% if permission.user.search.view %}
 
+                {% if permission.denied.status %}
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                            <strong>{{ permission.denied.message }}</strong>
+                            <button type="button" class="close" data-dismiss="alert">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        {% endif %}
+
                     <!-- START : USER SEARCH FORM -->
                     <div class="card">
                         <div class="card-header">Search User</div>
