management ui modification

--- a/themes/default/school/index.html
+++ b/themes/default/school/index.html
@@ -48,7 +48,7 @@
                                                     <th class="text-center" width="1%" scope="col">Grade</th>
                                                     <th class="text-center" width="1%" scope="col">Class</th>
                                                     <th scope="col">Teacher in Charge</th>
-                                                    <th class="text-right" width="1%" scope="col">&nbsp;</th>
+                                                    <th class="text-right" scope="col">&nbsp;</th>
                                                 </tr>
                                             </thead>
 
